manifests/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  type: NodePort
  ports:
    - name: http
      port: 8096
      targetPort: http
      nodePort: 8443
      protocol: TCP
  selector:
    app: jellyfin
